[gd_scene load_steps=4 format=2]

[ext_resource path="res://Script/click me.gd" type="Script" id=1]
[ext_resource path="res://Scene/Folder/Panel.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 126.5, 41.5 )

[node name="Scene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -600.0

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 192, 104 )
script = ExtResource( 1 )

[node name="Kotak1" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( 192, 312 )
script = ExtResource( 1 )

[node name="Kotak1" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 1 )

[node name="Area2D3" type="Area2D" parent="."]
position = Vector2( 192, 512 )
script = ExtResource( 1 )

[node name="Kotak1" type="CollisionShape2D" parent="Area2D3"]
shape = SubResource( 1 )

[node name="Panel" type="CanvasLayer" parent="."]

[node name="ColorRect" parent="Panel" instance=ExtResource( 3 )]
visible = false

[connection signal="input_event" from="Area2D" to="Area2D" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="Area2D" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="Area2D" method="_on_Area2D_mouse_exited"]
[connection signal="input_event" from="Area2D2" to="Area2D2" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D2" to="Area2D2" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D2" to="Area2D2" method="_on_Area2D_mouse_exited"]
[connection signal="input_event" from="Area2D3" to="Area2D3" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D3" to="Area2D3" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D3" to="Area2D3" method="_on_Area2D_mouse_exited"]
